@@ -4,6 +4,7 @@
 <input type="hidden" id="zpoint_carriers" name="zpoint_carriers" value='{$zPointCarriersIdsJSON}'>
 <input type="hidden" id="app_identity" name="app_identity" value="{$appIdentity}">
 <input type="hidden" id="packeta-api-key" name="packeta-api-key" value="{$apiKey}">
+<input type="hidden" id="widgetAutoOpen" name="widgetAutoOpen" value="{$widgetAutoOpen}">
 <script type="text/javascript">
     var packeteryAjaxFrontToken = "{$token}";
     var prestashopVersion = "{$psVersion}";
