@@ -66,3 +66,4 @@
 2.1.8 - Fixed: fix of bug in PrestaShop version lower than 1.7.6, when saving a change of pickup point
         in the administration, especially in the case of Z-BOXes (getting JSON correctly)
 2.2.0 - Added: compatibility with PrestaShop 1.6
+        Added: ability to open widget right after choosing delivery method without the need to click on button
